Fixed h3 layout bug. Header elements now clear floats.

--- a/source/css/common.css.scss
+++ b/source/css/common.css.scss
@@ -758,6 +758,7 @@ div[role="main"] {
   h1, h2, h3, h4, h5, h6 {
     color       : $headerColor;
     line-height : 1.2;
+    @extend .clear;
   }
   
   h4, h5, h6 {
